feat: enhance JWT authentication filter to include user role and improved error handling